--- a/New folder/display.html
+++ b/New folder/display.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
-        <h2> class="inline"></h2>
-        <h2> class="inline"></h2>
+        <h2 class="inline">same</h2>
+        <h2 class="inline">line</h2>
     </div>
     <div class="flex-container">
-        <div  class="item1">1</div>
-        <div class="item2">2</div>
-        <div class="item3">3</div>
-        <div class="item4">4</div>
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
     </div>
 </body>
 </html>
